--- a/public/tuiter/explore/jsindex.css
+++ b/public/tuiter/explore/jsindex.css
@@ -7,6 +7,7 @@ body{
     height: 40px;
     border : #e9ebee solid 1px;
     color: #90979d;
+    background-color: white;
     margin-bottom: 7px;
     border-radius: 50px;
     padding-left: 50px;
@@ -24,7 +25,7 @@ body{
     position:relative;
     right:0px;
 
-    /*padding-left: 20px;*/
+    /* padding-right: 20px; */
 }
 .wd-textid{
     font-size: 12px;
@@ -42,39 +43,43 @@ body{
 }
 
 .wd-content-border{
-    border-left: #e9ebee solid 1px;
-    border-right: #e9ebee solid 1px;
-    border-bottom: #e9ebee solid 1px;
-    padding-left : 10px;
+    /* border-left: #e9ebee solid 1px;
+    border-right: #e9ebee solid 1px; */
+    border-bottom: #272727 solid 1px;
+    padding-left : 20px;
     padding-top:10px;
     padding-bottom:10px;
+    background-color: #222222;
+    padding-right:20px;
 }
 .fa-check-circle{
     padding-top:3px;
     margin-left:3px;
     margin-right:3px;
+    color: white;
 
 }
 .wd-bold-wtf{
     font-weight: bold;
-    color:black;
+    color:white;
     font-size: 12px;
     white-space: nowrap;
 }
 .wd-image-content{
     position:relative;
+    padding-bottom:10px;
 }
 .wd-big-text{
     font-size: 30px;
     font-weight: bold;
     color:white;
     position:absolute;
-    bottom: 8px;
+    bottom: 18px;
     left:10px;
 }
 .wd-bold{
     font-weight: bold;
-    color:black;
+    color:white;
     font-size: 12px;
 }
 .wd-mt-4{
@@ -85,12 +90,13 @@ body{
     font-family: arial;
     font-size: 12px;
     color: #989ea3;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .fa-search{
     position: relative;
     left:15px
+    
 
 
 }
@@ -127,7 +133,7 @@ body{
 .btn-primary{
     width: 100%;
     border-radius: 50px;
-    
+    font-size:12px;
 }
 /*.fa-search{*/
 /*    position:absolute;*/
