--- a/src/tuiter/profile/profile.css
+++ b/src/tuiter/profile/profile.css
@@ -1,5 +1,5 @@
 html, body {
-    
+    background-color: black;
     border-color: rgb(47, 51, 54);
 
 }
@@ -45,7 +45,7 @@ html, body {
 }
 
 .wd-user{
-    color: black;
+    color: white;
     font-family: sans-serif;
     font-size: 15px;
     font-weight: bold;
@@ -67,7 +67,7 @@ html, body {
 .wd-content-body{
     width: 506px;
     font-size: 15px;
-    color: black;
+    color: white;
     font-family: sans-serif;
 }
 
@@ -78,20 +78,18 @@ html, body {
 .wd-content-image{
     width: 504px;
     height: 264px;
-    /* border-top-left-radius: 20px;
-    border-top-right-radius: 20px; */
-    
+    border-radius: 20px;
     margin: 0px;
 
 }
 .wd-image-heading{
     font-family: sans-serif;
     font-size: 15px;
-    color: black;
+    color: white;
     font-weight: bold;
     padding: 12px 12px 12px 12px;
     margin: 0px;
-    border-top: #5a6067 solid thin;
+    border-top: #2f3336 solid thin;
 
 }
 
@@ -109,10 +107,10 @@ html, body {
     margin-top: 12px;
     margin-bottom: 12px;
     margin-right: 12px;
-    overflow: hidden;
+
     width: 506px;
     border-radius: 20px;
-    border: thin solid #AAB8C2;
+    border: thin solid rgb(47, 51, 54);
 
 }
 
@@ -125,12 +123,9 @@ html, body {
     width: 25%;
     padding-top: 12px;
 }
-.wd-red-text{
-    color:red !important;
-}
 
 .wd-icon-text{
-    padding-left: 30px;
+    padding-left: 12px;
     color: #5a6067;
     font-size: 12px;
     font-family: sans-serif;
@@ -140,12 +135,11 @@ a.wd-post-icon { text-decoration: none;
     color: #5a6067}
 
 .wd-heart{
-    color: #5a6067;
+    color: red;
 }
-.fa-heart{color:pink;}
 
 .wd-post{
-    border-bottom: #AAB8C2 solid thin;
+    border-bottom: #2f3336 solid thin;
     overflow: auto;
 }
 
@@ -167,7 +161,7 @@ a.wd-post-icon { text-decoration: none;
     margin: 0;
     padding: 0;
     font-size: 0.5em;
-    color: #AAB8C2;
+    color: #2f3336;
 }
 
 .fa-circle {
@@ -181,12 +175,6 @@ a.wd-post-icon { text-decoration: none;
 
 a {
     text-decoration: none;
-}
-.wd-left-3{
-    padding: 3px;
-}
-.fa-check-circle{
-    color:#1e9bf0;
 }
 
 .wd-light-text {
